--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,20 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es6",
-		"outDir": "out",
-        "lib": [
-            "es6"
-        ],
+		"target": "es5",
+		"lib": [
+			"es6",
+			"es2015.promise"
+		],
+		"outDir": "./out",
 		"sourceMap": true,
-        "rootDir": "."
+		"strictNullChecks": true,
+		"noImplicitAny": true,
+		"noImplicitReturns": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true
 	},
-	"exclude": [
-		"node_modules",
-		".vscode-test"
+	"include": [
+		"src/**/*"
 	]
 }
