--- a/package.json
+++ b/package.json
@@ -403,32 +403,32 @@
 	"devDependencies": {
 		"@types/highlight.js": "9.1.10",
 		"@types/lodash.throttle": "^4.1.3",
-		"@types/node": "^8.10.25",
 		"@types/mocha": "^5.2.5",
+		"@types/node": "^8.10.25",
 		"lodash.throttle": "^4.1.1",
+		"mocha-junit-reporter": "^1.23.3",
+		"mocha-multi-reporters": "^1.1.7",
+		"ts-loader": "^4.0.1",
+		"tslint": "^5.9.1",
 		"typescript": "^2.7.2",
 		"vscode": "^1.1.10",
-		"tslint": "^5.9.1",
-		"mocha-junit-reporter": "^1.17.0",
-		"mocha-multi-reporters": "^1.1.7",
-		"webpack": "^4.20.2",
-		"webpack-cli": "^3.1.1",
-		"ts-loader": "^4.0.1"
+		"webpack": "^4.41.5",
+		"webpack-cli": "^3.1.1"
 	},
 	"dependencies": {
-		"@asciidoctor/core": "2.0.3",
+		"@asciidoctor/core": "2.1.0",
 		"asciidoctor-kroki": "^0.6.0",
-		"asciidoctor-plantuml": "1.1.13",
-		"copy-paste": "^1.2.0",
-		"file-url": "^1.0.1",
-		"follow-redirects": "^1.4.1",
-		"fs-extra": "^7.0.0",
-		"https-proxy-agent": "^2.2.1",
+		"asciidoctor-plantuml": "1.5.0",
+		"copy-paste": "^1.3.0",
+		"file-url": "^3.0.0",
+		"follow-redirects": "^1.10.0",
+		"fs-extra": "^8.1.0",
+		"https-proxy-agent": "^4.0.0",
 		"moment": "^2.14.1",
 		"npm-which": "^3.0.1",
-		"tmp": "0.0.33",
-		"upath": "^1.0.0",
-		"viz.js": "^1.8.1",
-		"vscode-nls": "^4.0.0"
+		"tmp": "0.1.0",
+		"upath": "^1.2.0",
+		"viz.js": "^2.1.2",
+		"vscode-nls": "^4.1.1"
 	}
 }
